--- a/app/src/main/res/layout/list_view_row.xml
+++ b/app/src/main/res/layout/list_view_row.xml
@@ -11,12 +11,29 @@
         android:padding="3dp"
         android:layout_margin="3dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView"
-        android:textSize="30dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="20dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView"
+            android:textSize="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="123"
+            android:id="@+id/textView2"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
